<resources>
    <string name="app_name">TourApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_diaries">Diaries</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_explore">Explore</string>
    <string name="title_settings">Settings</string>
    <string name="title_photo">New photo</string>
    <string name="title_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_label">Explore</string>
    <string name="coupons_label">Coupons</string>
    <string name="diaries_label">Diaries</string>
    <string name="settings_label">Settings</string>
    <string name="resturant_label">Resturants</string>
    <string name="hotel_label">Hotels</string>
    <string name="locations_label">Locations of interest</string>
    <string name="infopoint_label">Infopints</string>
    <string name="all_selected_label">All</string>
    <string name="preferences_label">Preferences</string>
    <string name="quick_links">Quick links</string>
    <string name="title_activity_maps">Map</string>
    <string name="target_position">Target Position</string>
    <string name="permission_reason_title">Needed Permission</string>
    <string name="permission_reason_message">We need permission to use some of your device functionality in order to satisfy your needs.</string>
    <string name="no_storage_permission_title">Permission Warning</string>
    <string name="no_storage_permission_message">The Storage Permission is mandatory for the usage of this application</string>
    <string name="permission_map_reason_title">Location Permission</string>
    <string name="permission_map_reason_message">We need this permission to locate points of interest nearby</string>
    <string name="no_location_permission_title">Permission Warning</string>
    <string name="no_location_permission_message">The Location Permission is mandatory for the usage of this application</string>
</resources>
