<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diaires"
            android:icon="@drawable/ic_photo_album_black_24dp"
            android:title="@string/title_diaries" />
        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/title_coupons" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/title_explore" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_photo"
                android:icon="@drawable/ic_photo_camera_black_24dp"
                android:title="@string/title_photo" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/title_map" />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item android:title=""></item>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    </group>

</menu>
