<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/new_secondaryColor"
    android:isScrollContainer="true"
    android:paddingTop="18dp"
    android:paddingBottom="60dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_home_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/new_primaryLightColor"
        android:clickable="true"
        android:focusable="true"

        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/card_diaries"
        app:layout_constraintEnd_toStartOf="@+id/card_coupons"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cippy_bianco">

            <ImageView
                android:id="@+id/image_view_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_cippy"
                android:contentDescription="Explore"
                android:maxHeight="150dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_tourapp_foreground" />

            <TextView
                android:id="@+id/explore_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/new_secondaryLightColor"
                android:padding="8dp"
                android:text="@string/explore_label"
                android:textAlignment="center"
                android:textColor="@color/new_primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_explore" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_coupons"
        style="@style/Base.CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/new_primaryLightColor"

        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/cardview_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_home_explore"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cippy_bianco">

            <ImageView
                android:id="@+id/image_coupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_cippy"
                android:maxHeight="150dp"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/coupons_label"
                app:srcCompat="@drawable/ic_coupon_foreground" />

            <TextView
                android:id="@+id/coupons_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/new_primaryTextColor"
                android:padding="8dp"
                android:text="@string/coupons_label"
                android:textAlignment="center"
                android:textColor="@color/new_primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_diaries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/new_primaryLightColor"

        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardview_settings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_home_explore">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_diaries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_cippy"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/diaries_label"
                app:srcCompat="@drawable/ic_photo_diary_foreground" />

            <TextView
                android:id="@+id/diaries_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/diaries_label"
                android:textAlignment="center"
                android:textColor="@color/new_primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/new_primaryLightColor"

        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_diaries"
        app:layout_constraintTop_toBottomOf="@+id/card_coupons">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/new_secondaryLightColor"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/image_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/settings_label"
                app:srcCompat="@drawable/ic_settings_foreground" />

            <TextView
                android:id="@+id/settings_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_label"
                android:textColor="@color/primaryTransparentLightColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/card_diaries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_coupons" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:barrierDirection="top"
        app:layout_constraintBottom_toTopOf="@+id/cardview_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_home_explore" />


</androidx.constraintlayout.widget.ConstraintLayout>


